@@ -7,6 +7,7 @@ Process Hacker
      * Tooltips for column headers
      * Improved performance
      * Bug fixes
+   * Added more process tree list columns
    * Added Time stamp column to network list
    * Date/time display is now swapped (so time is shown before 
      date)
